import org.springframework.boot.gradle.plugin.SpringBootPlugin

buildscript {
    dependencies {
        classpath 'org.flywaydb:flyway-database-postgresql:11.14.1'
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0'
    id 'com.google.protobuf' version '0.9.5'
    id 'pl.allegro.tech.build.axion-release' version '1.21.1'
    id 'name.remal.sonarlint' version '7.0.1'
    id 'org.flywaydb.flyway' version '11.14.1'
    id 'jacoco'
    id 'com.github.spotbugs' version '6.5.0'
}

group = 'com.aratiri'
description = 'A multi-user Bitcoin Lightning and on-chain middleware platform'

scmVersion {
    tag {
        prefix.set('v')
    }
    useHighestVersion.set(true)
    versionCreator('simple')
    versionIncrementer('incrementPatch')
    releaseOnlyOnReleaseBranches = true
    releaseBranchNames = ['master']
}

version = providers.gradleProperty('appVersion')
        .orElse(provider { scmVersion.version })
        .get()

ext {
    grpcVersion = '1.75.0'
    protobufVersion = '4.30.2'
    springGrpcVersion = '0.8.0'
    springdocOpenapiStarterWebmvcUiVersion = '2.8.0'
    zxingVersion = '3.5.3'
    jsonWebTokenVersion = '0.12.6'
    jakartaAnnotationApiVersion = '2.1.1'
    googleApiClientVersion = '2.2.0'
    javaWebSocketVersion = '1.5.3'
    testcontainersVersion = '1.20.4'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

springBoot {
    buildInfo()
}

sonarLint {
    ignoreFailures = false
    isGeneratedCodeIgnored = true
    languages {
        include('java')
    }
    ignoredPaths.add('build/**')
    ignoredPaths.add('**/generated/**')
}

spotbugs {
    ignoreFailures = false
    showStackTraces = true
    showProgress = true
    effort = 'MAX'
    reportLevel = 'LOW'
    excludeFilter = file("$rootDir/config/spotbugs/exclude.xml")
}

spotbugsMain {
    reports {
        html.required = true
        xml.required = true
    }
}

spotbugsTest {
    enabled = false
}

flyway {
    url = System.getenv('SPRING_DATASOURCE_URL')
    user = System.getenv('SPRING_DATASOURCE_USERNAME')
    password = System.getenv('SPRING_DATASOURCE_PASSWORD')
    schemas = [System.getenv('SPRING_FLYWAY_SCHEMAS')]
    defaultSchema = System.getenv('SPRING_FLYWAY_DEFAULT_SCHEMA')
    locations = ['classpath:db/migration']
    baselineOnMigrate = true
}

dependencies {
    implementation platform(SpringBootPlugin.BOM_COORDINATES)
    implementation platform("org.springframework.grpc:spring-grpc-dependencies:${springGrpcVersion}")
    annotationProcessor platform(SpringBootPlugin.BOM_COORDINATES)
    testImplementation platform(SpringBootPlugin.BOM_COORDINATES)
    testAnnotationProcessor platform(SpringBootPlugin.BOM_COORDINATES)

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocOpenapiStarterWebmvcUiVersion}"
    runtimeOnly 'com.h2database:h2'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'
    implementation "com.google.api-client:google-api-client:${googleApiClientVersion}"
    implementation 'org.springframework.kafka:spring-kafka'
    implementation "com.google.zxing:core:${zxingVersion}"
    implementation "com.google.zxing:javase:${zxingVersion}"
    implementation "io.grpc:grpc-netty-shaded:${grpcVersion}"
    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
    implementation "io.grpc:grpc-stub:${grpcVersion}"
    implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
    implementation "io.jsonwebtoken:jjwt-api:${jsonWebTokenVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jsonWebTokenVersion}"
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jsonWebTokenVersion}"
    implementation "jakarta.annotation:jakarta.annotation-api:${jakartaAnnotationApiVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'
    implementation "org.java-websocket:Java-WebSocket:${javaWebSocketVersion}"
    implementation 'net.logstash.logback:logstash-logback-encoder:8.0'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
    testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
    testImplementation "org.testcontainers:kafka:${testcontainersVersion}"

    // spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.14.0'
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:${protobufVersion}"
    }
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
        }
    }
    generateProtoTasks {
        all().configureEach { task ->
            task.plugins {
                grpc {
                    option '@generated=omit'
                }
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += '-parameters'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('sonarlintTest') {
    setDependsOn([tasks.named('testClasses')])
    setSource(sourceSets.test.allJava)
    java {
        mainOutputDirectories.setFrom(
                layout.buildDirectory.dir('classes/java/main'),
                layout.buildDirectory.dir('resources/main')
        )
        mainClasspath.setFrom(sourceSets.main.compileClasspath)
        testOutputDirectories.setFrom(
                layout.buildDirectory.dir('classes/java/test'),
                layout.buildDirectory.dir('resources/test')
        )
        testClasspath.setFrom(sourceSets.test.compileClasspath)
    }
}

def jacocoExcludes = [
    'lnrpc/**',
    'routerrpc/**',
    'invoicesrpc/**',
    'com/google/**',        // protobuf utilities
]

jacocoTestReport {
    dependsOn(tasks.named('test'))
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoExcludes)
        }))
    }
}

jacocoTestCoverageVerification {
    dependsOn(tasks.named('test'))
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                minimum = 0.90
            }
        }
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoExcludes)
        }))
    }
}

tasks.named('jar') {
    enabled = false
}

def lndProtoChecksums = [
        'invoices.proto' : '6732770300d3111a1ab129ef75ea750131b2f841646547a3aef2a4b8d34e79f7',
        'lightning.proto': 'f39b53b23763087aef23bdc75250f9f0e76f3cf89ef531ce91301baec4380e6b',
        'router.proto'   : 'b4a3cc4043acf928dc9d6d81e5cdc5cdcde534991b8b330a918c4416b20a9be7',
]

tasks.register('verifyLndProtoSources') {
    group = 'verification'
    description = 'Verifies checked-in LND proto files match the declared LND version and checksums'

    inputs.property('lndProtoVersion', providers.gradleProperty('lndProtoVersion'))
    inputs.files(lndProtoChecksums.keySet().collect { fileName ->
        layout.projectDirectory.file("src/main/proto/${fileName}")
    })

    doLast {
        def declaredVersion = providers.gradleProperty('lndProtoVersion').get()
        def expectedSourceHeader = "// Source: LND ${declaredVersion} (github.com/lightningnetwork/lnd)".toString()
        def immutableHeaderTokens = ['DO NOT MODIFY', 'synced from upstream release']

        lndProtoChecksums.each { fileName, expectedChecksum ->
            def protoFile = layout.projectDirectory.file("src/main/proto/${fileName}").asFile
            if (!protoFile.isFile()) {
                throw new GradleException("Missing LND proto source file: ${protoFile}")
            }

            def leadingLines = protoFile.readLines('UTF-8').take(5)
            if (!leadingLines.contains(expectedSourceHeader)) {
                throw new GradleException(
                        "${fileName} does not declare the configured LND proto version ${declaredVersion}"
                )
            }
            if (!leadingLines.any { line -> immutableHeaderTokens.every { token -> line.contains(token) } }) {
                throw new GradleException("${fileName} is missing the upstream source warning header")
            }

            def actualChecksum = java.security.MessageDigest.getInstance('SHA-256')
                    .digest(protoFile.bytes)
                    .collect { String.format('%02x', it & 0xff) }
                    .join()
            if (actualChecksum != expectedChecksum) {
                throw new GradleException(
                        "${fileName} checksum mismatch for ${declaredVersion}. " +
                                "Expected ${expectedChecksum}, got ${actualChecksum}. " +
                                'Sync from the declared LND release and update lndProtoChecksums together.'
                )
            }
        }
    }
}

tasks.register('verifyProtoClassesInBootJar') {
    group = 'verification'
    description = 'Verifies proto-generated classes are packaged in the boot jar'
    dependsOn(tasks.named('bootJar'))

    doLast {
        def expectedPackagePaths = ['lnrpc/', 'routerrpc/', 'invoicesrpc/']
        def bootJarFile = tasks.named('bootJar').get().archiveFile.get().asFile
        def jarEntries = zipTree(bootJarFile).files.collect { file ->
            file.path.replace('\\', '/')
        }

        def missingPackages = expectedPackagePaths.findAll { packagePath ->
            !jarEntries.any { entry -> entry.contains("/${packagePath}") }
        }

        if (!missingPackages.isEmpty()) {
            throw new GradleException(
                    "Missing expected proto package classes in boot jar ${bootJarFile.name}: ${missingPackages.join(', ')}"
            )
        }
    }
}

tasks.named('check') {
    dependsOn(
            tasks.named('sonarlintMain'),
            tasks.named('sonarlintTest'),
            tasks.named('verifyLndProtoSources'),
            tasks.named('verifyProtoClassesInBootJar'),
            tasks.named('jacocoTestCoverageVerification'),
            tasks.named('spotbugsMain')
    )
}
